--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .container {
@@ -9,21 +11,116 @@
 }
 
 .header {
-  border: 1px solid black;
   box-shadow: 1% grey;
   grid-column: 2;
   grid-row: 1 / 2;
   display: grid;
   grid-template-columns: 65% 35%;
   grid-template-rows: 50% 50%;
+  box-shadow: 0 4px 10px -2px gray;
 }
 
 .header > .top-portion {
   grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: 105% 59%;
+  align-items: center;
 }
 
-.header .header > .bottom-portion {
+.top-portion > .top-left {
+  display: flex;
+  height: 35px;
+}
+
+.search-logo {
+  height: 25px;
+  width: 25px;
+  align-self: center;
+  margin-right: 20px;
+  color: grey;
+}
+
+.top-portion > .top-right {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 250px;
+}
+
+input {
+  background-color: #d1d5db;
+  border-radius: 25px;
+  width: 500px;
+  border: none;
+}
+
+.brand-logo {
+  height: 40px;
+  width: 40px;
+}
+
+.noti-bell {
+  height: 25px;
+  width: 25px;
+}
+
+.account {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.header > .bottom-portion {
   grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 100% 56%;
+}
+
+.bottom-portion > .bottom-left {
+  display: flex;
+  align-items: center;
+}
+
+div.account-intro > p {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.bottom-left > .account-intro:last-child {
+  font-size: 20px;
+}
+
+.bottom-portion > .bottom-left > .brand-logo {
+  grid-column: 1;
+  height: 70px;
+  width: 70px;
+  margin-right: 15px;
+}
+
+.bottom-portion > .bottom-right {
+  display: flex;
+  align-items: center;
+}
+
+.bottom-right > .header-buttons {
+  grid-column: 2;
+  display: flex;
+  justify-content: space-around;
+  width: 300px;
+}
+
+.header-buttons > button {
+  background-color: #0284c7;
+  color: white;
+  font-weight: 700;
+  height: 40px;
+  width: 80px;
+  border-radius: 20px;
+  border: none;
+}
+
+.top-portion,
+.bottom-portion {
+  margin-left: 35px;
 }
 
 .sidebar {
