--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 .container {
   display: grid;
   grid-template-columns: 20% 80%;
-  grid-template-rows: 25% 99%;
+  grid-template-rows: 25% 136%;
 }
 
 .header {
@@ -59,7 +59,8 @@ input {
   width: 40px;
 }
 
-.noti-bell {
+.noti-bell,
+.sidebar-section-logos {
   height: 25px;
   width: 25px;
 }
@@ -124,7 +125,84 @@ div.account-intro > p {
 }
 
 .sidebar {
+  background-color: #0284c7;
+  color: white;
   grid-column: 1;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 12% 35% 20%;
+  padding-left: 25px;
+}
+
+.sidebar-section-logos {
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+
+.sidebar-middle,
+.sidebar-bottom {
+  display: flex;
+}
+
+.sidebar-middle > div:last-child,
+.sidebar-bottom > div:last-child {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.dashboard {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  font-size: 28px;
+  font-weight: 600;
+  display: flex;
+  margin-top: 15px;
+  margin-left: -5px;
+}
+
+.logo-container {
+  display: grid;
+  grid-template-columns: 17px 17px;
+  gap: 4px;
+  margin-right: 20px;
+}
+
+.logo-container > div {
+  background-color: white;
+}
+
+.box-1 {
+  grid-row: 1 / 3;
+  height: 22px;
+}
+
+.box-2 {
+  grid-column: 2 / 3;
+  height: 13px;
+}
+
+.box-3 {
+  grid-column: 1 / 2;
+  height: 13px;
+}
+
+.box-4 {
+  height: 22px;
+  margin-top: -9px;
+  grid-column: 2 / 3;
+}
+
+.middle {
+  grid-row: 2 / 3;
+  /* margin-top: -150px; */
+}
+
+.bottom {
+  grid-row: 3 / 4;
+  /* margin-top: -175px; */
 }
 
 .main-content {
