--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 .container {
   display: grid;
   grid-template-columns: 20% 80%;
-  grid-template-rows: 25% 136%;
+  grid-template-rows: 20vh 80vh;
 }
 
 .header {
@@ -131,7 +131,7 @@ div.account-intro > p {
   grid-row: 1 / 3;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 12% 35% 20%;
+  grid-template-rows: 15% 35% 20%;
   padding-left: 25px;
 }
 
@@ -197,15 +197,86 @@ div.account-intro > p {
 
 .middle {
   grid-row: 2 / 3;
-  /* margin-top: -150px; */
 }
 
 .bottom {
   grid-row: 3 / 4;
-  /* margin-top: -175px; */
 }
 
 .main-content {
+  background-color: #e2e8f0;
   grid-column: 2;
   grid-row: 2;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 5% 95%;
+  padding-top: 25px;
+}
+
+div.your-projects {
+  align-items: end;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  padding-left: 25px;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 500;
+}
+
+div.left-section {
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(2, 45%);
+  grid-template-rows: repeat(3, 200px);
+  gap: 25px;
+  padding: 25px;
+  padding-top: 0;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: 3% auto;
+  grid-template-rows: 75% 25%;
+  border: none;
+  background-color: white;
+  border-radius: 15px;
+}
+
+.article-interact {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 25px;
+}
+
+.article-interact > div {
+  height: 30px;
+  width: 30px;
+  padding-left: 25px;
+}
+
+div.article > .side-strip {
+  background-color: #f59e0b;
+  padding-left: 0;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  grid-column: 1 / 2;
+  grid-row: span 2;
+}
+
+.article-content {
+  padding: 25px;
+}
+
+.article-content > p:first-child {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.article-content > p:nth-child(2) {
+  font-size: 16px;
+  color: gray;
+}
+
+div.left-section:nth-child(2) {
+  grid-column: 1 / 2;
 }
